--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,3 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Ga+Maamli&family=Wittgenstein:ital,wght@0,400..900;1,400..900&display=swap');
+
 h3{
-    background-color: blueviolet;
+    font-size: 80px;
+    font-family: "Ga Maamli", sans-serif;
 }
+
+.btn{
+    background-color: rgba(21, 21, 214, 0.56);
+    padding: 10px 15px;
+    color:white;
+    border-radius: 5px;
+    font-size: 15px;
+    border-width: 3px;
+}
+
+.heading{
+    width: 600px;
+    margin: auto;
+    background-image:linear-gradient(45deg, rgba(0, 0, 255, 0.544),transparent), url('../images/whale.jpg');
+    height: 700px;
+    background-position:center;
+    
+}
+
